Modified: ndk_jni_command.md Add: AndroidStudio_IntelliJIDEA_LiveTemplate